# chainofcustody

./: .gitignore  .gitmodules  CLAUDE.md  README.md  main.py  pyproject.toml
chainofcustody/: cli.py  progress.py  sequence.py
chainofcustody/cds/: __init__.py  lookup.py
chainofcustody/dashboard_api/: __init__.py  api.py
chainofcustody/evaluation/: __init__.py  codons.py  data.py  evolve.py  fitness.py  manufacturing.py  mirna.py  mutations.py  parser.py  plot_secondary_structure.py  report.py  ribonn.py  scoring.py  stability.py  structure.py  transcript_plot.py  utils.py
chainofcustody/initial/: __init__.py  cds.py
chainofcustody/optimization/: __init__.py  algorithm.py  gradient_seed.py  moesm3_seeds.py  operators.py  problem.py
chainofcustody/three_prime/: __init__.py  cell_type_map.py  filtering.py  filtering_on_target.py  generate_UTR3.py  generate_utr3.py  merge_db.py  optimize_utr3.py
chainofcustody/three_prime/db/: sample_metadata.csv
dashboard/: api.py  app.R  demo_plotting.ipynb  plot_secondary_structure.py
docs/: evaluation-metrics.md
scripts/: export_data.py  merge_db.py
tests/: test_cli.py
tests/cds/: test_dummy.py  test_integration.py
tests/evaluation/: test_manufacturing.py  test_ribonn.py
tests/initial/: test_dummy.py  test_integration.py
tests/optimization/: test_optimization.py  test_te_improvements.py
tests/three_prime/: test_cell_type_map.py  test_filtering.py  test_generate_utr3.py  test_optimize_utr3.py
web/: package-lock.json  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/app/compare/: page.tsx
web/app/components/: AppShell.tsx  BindingSiteDetail.tsx  CandidateLeaderboard.tsx  CellTypeSelector.tsx  (+15 more)
web/lib/: candidates.tsx  colours.ts  evaluation-data.ts  format.ts  greedy.ts  mirna-data.ts  sponge.ts  theme.tsx  types.ts  utr-design.ts
web/public/: mirna_data.json
(+3 files in other folders)
